[gd_scene load_steps=10 format=3 uid="uid://dpgtm36htk3qw"]

[ext_resource type="Script" uid="uid://bbtnyohhdghvq" path="res://scripts/rich_person_minigame.gd" id="1_jwd4e"]
[ext_resource type="Theme" uid="uid://dd0s34c5ii2ui" path="res://theme.tres" id="2_jupnj"]
[ext_resource type="Texture2D" uid="uid://36aawsxe7l0x" path="res://sprites/graph_bg.png" id="3_fgf4e"]

[sub_resource type="Animation" id="Animation_ikxhh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_hapmi"]
resource_name = "scroll"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-32, -32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wq1ny"]
_data = {
&"RESET": SubResource("Animation_ikxhh"),
&"scroll": SubResource("Animation_hapmi")
}

[sub_resource type="Animation" id="Animation_vi0dq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_hvqj5"]
resource_name = "scroll"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.033333335, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-32, 0), Vector2(0, -32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0lf00"]
_data = {
&"RESET": SubResource("Animation_vi0dq"),
&"scroll": SubResource("Animation_hvqj5")
}

[node name="RichPersonMinigame" type="Node2D"]
script = ExtResource("1_jwd4e")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Graph" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="Graph"]
handle_input_locally = false
size = Vector2i(640, 480)
render_target_update_mode = 4

[node name="GraphCamera" type="Camera2D" parent="Graph/SubViewport"]

[node name="BG" type="Node2D" parent="Graph/SubViewport/GraphCamera"]
position = Vector2(-320, -240)

[node name="Main" type="TextureRect" parent="Graph/SubViewport/GraphCamera/BG"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 672.0
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture = ExtResource("3_fgf4e")
stretch_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graph/SubViewport/GraphCamera/BG/Main"]
libraries = {
&"": SubResource("AnimationLibrary_wq1ny")
}
autoplay = "scroll"

[node name="Overlay" type="TextureRect" parent="Graph/SubViewport/GraphCamera/BG"]
modulate = Color(1, 1, 1, 0.2509804)
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 672.0
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture = ExtResource("3_fgf4e")
stretch_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graph/SubViewport/GraphCamera/BG/Overlay"]
libraries = {
&"": SubResource("AnimationLibrary_0lf00")
}
autoplay = "scroll"

[node name="SuccessGraph" type="Line2D" parent="Graph/SubViewport"]
points = PackedVector2Array(-1000, 0, 100000, 0)
width = 2.0
default_color = Color(0, 1, 0, 1)
antialiased = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jupnj")

[node name="Name" type="RichTextLabel" parent="Control"]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.033333335
anchor_right = 1.0
anchor_bottom = 0.23333333
grow_horizontal = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]Deal with John Rich III"
metadata/_edit_use_anchors_ = true

[node name="Question" type="RichTextLabel" parent="Control"]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.40833333
anchor_right = 1.0
anchor_bottom = 0.60833335
grow_horizontal = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]What"
metadata/_edit_use_anchors_ = true

[node name="TimeLeft" type="ProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 138.0
offset_top = 20.0
offset_right = -142.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
value = 100.0
show_percentage = false

[node name="Buttons" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 300.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Left" type="Button" parent="Control/Buttons"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Yes"

[node name="Right" type="Button" parent="Control/Buttons"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "No"

[connection signal="pressed" from="Control/Buttons/Left" to="." method="_on_button_pressed" binds= [0]]
[connection signal="pressed" from="Control/Buttons/Right" to="." method="_on_button_pressed" binds= [1]]
